<b>Version 1.4.0:</b><br/><br/>
    &#8226; Customize the two pages on the left of the main timeline<br/>
    &#8226; Long click to remove favorite users<br/>
    &#8226; Faster refresh times again<br/>
    &#8226; More stability fixes<br/>
    &#8226; Better memory management again<br/>
</br>

<b>Version 1.3.4:</b><br/><br/>
    &#8226; New method for faster refresh times<br/>
    &#8226; Small bug fixes<br/>
</br>

<b>Version 1.3.3:</b><br/><br/>
    &#8226; Few fixes for attaching images to tweets<br/>
</br>

<b>Version 1.3.2:</b><br/><br/>
    &#8226; A little bit higher quality YouTube thumbnails<br/>
    &#8226; Better stability<br/>
</br>

<b>Version 1.3.0:</b><br/><br/>
    &#8226; TweetMarker support<br/>
    &#8226; TwitLonger support<br/>
    &#8226; Upload with TwitPic<br/>
    &#8226; Much better handling of user searches<br/>
    &#8226; Added share and quote button to the in-line expansions on tweets<br/>
    &#8226; Add color to the retweet and favorite buttons so you can better distinguish your actions on a tweet<br/>
    &#8226; Live streamed tweets will be automatically loaded when you are at the top of the timeline<br/>
    &#8226; Higher quality Instagram, TwitPic, and Imgur pictures<br/>
    &#8226; Remove retweets by long pressing the retweet button<br/>
    &#8226; Pull to refresh on searched trends<br/>
    &#8226; Don't show youtube in pictures timeline<br/>
    &#8226; Better feedback for when you retweet or favorite a status<br/>
    &#8226; Much better support for auto-trimming the databases<br/>
    &#8226; Added size 30 font<br/>
    &#8226; Mark direct messages and mentions as read when the notification is dismissed<br/>
    &#8226; Better handling of retweets when viewing the tweet<br/>
    &#8226; Reply to your own tweets<br/>
    &#8226; Share individual links in a tweet using the "Share Link" button in the overflow menu when viewing a tweet<br/>